:sparkles: feat: added cors configuration